[package]
name = "mountinfo2"
version = "0.2.2"
edition = "2024"
authors = ["Richard Stephens <richard@richst.dev>", "Guillem Castro <guillem@castrog.dev>"]
description = "A Rust library for parsing mount points on Linux and other Unix systems."
readme = "README.md"
repository = "https://github.com/richardstephens/mountinfo2"
license = "MIT"
keywords = ["mtab", "linux", "filesystem", "mount", "mountinfo"]
categories = ["filesystem", "os::linux-apis"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"


[features]
default = []
serde = ["dep:serde"]
